--- a/src/planner/binder/tableref/CMakeLists.txt
+++ b/src/planner/binder/tableref/CMakeLists.txt
@@ -15,7 +15,8 @@ add_library_unity(
   bind_subqueryref.cpp
   bind_table_function.cpp
   bind_named_parameters.cpp
-  plan_joinref.cpp)
+  plan_joinref.cpp
+  plan_match_recognize_ref.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_bind_tableref>
     PARENT_SCOPE)
