--- a/src/planner/binder/tableref/CMakeLists.txt
+++ b/src/planner/binder/tableref/CMakeLists.txt
@@ -3,10 +3,10 @@ add_library_unity(
   OBJECT
   bind_basetableref.cpp
   bind_bound_table_ref.cpp
+  bind_column_data_ref.cpp
   bind_delimgetref.cpp
   bind_emptytableref.cpp
   bind_expressionlistref.cpp
-  bind_column_data_ref.cpp
   bind_joinref.cpp
   bind_match_recognize_ref.cpp
   bind_named_parameters.cpp
@@ -14,9 +14,7 @@ add_library_unity(
   bind_showref.cpp
   bind_subqueryref.cpp
   bind_table_function.cpp
-  bind_named_parameters.cpp
-  plan_joinref.cpp
-  plan_match_recognize_ref.cpp)
+  plan_joinref.cpp)
 set(ALL_OBJECT_FILES
     ${ALL_OBJECT_FILES} $<TARGET_OBJECTS:duckdb_bind_tableref>
     PARENT_SCOPE)
