--- a/.github/workflows/slsa.yml
+++ b/.github/workflows/slsa.yml
@@ -7,12 +7,13 @@ permissions: read-all
 jobs:
   # Trusted builder.
   build:
+    runs-on: ubuntu-24.04-arm
     permissions:
       id-token: write # To sign the provenance.
       contents: write # To upload assets to release.
       actions: read # To read the workflow path.
     uses: slsa-framework/slsa-github-generator/.github/workflows/builder_container-based_slsa3.yml@v2.1.0
     with:
-      builder-image: "bash"
-      builder-digest: "sha256:9e2ba52487d945504d250de186cb4fe2e3ba023ed2921dd6ac8b97ed43e76af9"
+      builder-image: "ubuntu/24.04"
+      builder-digest: "sha256:e96e81f410a9f9cae717e6cdd88cc2a499700ff0bb5061876ad24377fcc517d7"
       config-path: ".github/config/slsa.toml"
